// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Day /> snapshots renders Day with all props 1`] = `
<button
  className="mfui-day mfui-day_between mfui-day_sunday"
  data-testid="root"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="mfui-day__label"
  >
    Пн
  </span>
</button>
`;

exports[`<Day /> snapshots renders Day with required props 1`] = `
<button
  className="mfui-day mfui-day_sunday"
  data-testid="root"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="mfui-day__label"
  />
</button>
`;

exports[`<Day /> snapshots should return empty div if label is not provided 1`] = `
<button
  className="mfui-day mfui-day_sunday"
  data-testid="root"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="mfui-day__label"
  />
</button>
`;
